static/css/home.css
/* ... */
/* highend smartphones */
@media only screen and (max-width: 1200px) {
  .home-header {
    width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    align-self: center;
    background-image: url(../images/blue-wallpaper-preview-24.jpg);
    background-size: cover;
  }

  .home-header .header-contents {
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .home-header .header-contents .header-content-name {
    width: 100%;
  }

  .home-header .header-contents .header-content-name .header-name {
    color: white;
    padding: 1rem;
    font-size: 5rem;
    font-family: "Yantramanav", sans-serif;
    margin-bottom: 2px;
  }

  .home-header .header-contents .header-content-image {
    display: none;
  }

  .home-header .header-contents .header-content-tagline .my-tagline {
    margin-top: 3px;
    color: white;
    width: 100%;
    font-size: 2.5rem;
  }

  .social {
    width: 100%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: #273469;
  }

  .social-icons {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80%;
    height: auto;
  }

  .social-icons img {
    width: 100px;
    height: auto;
  }

  .social-tagline {
    margin: 1rem;
    display: flex;
    width: 80%;
    height: auto;
    align-items: center;
    justify-content: center;
    font-size: 2.5rem;
  }

  .social-text {
    font-size: 1.75rem;
    width: 80%;
    height: auto;
  }

  .section-head {
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: "Yantramanav", sans-serif;
    font-size: 3.5rem;
  }
  .work {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url("../images/blue-wallpaper-preview-1.jpg");
    background-size: cover;
    padding-bottom: 1rem;
  }

  .work .work-display {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  .kevinbisner-com {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
  }

  .kevinbisner-com img {
    width: 80%;
    height: auto;
  }

  .kevinbisner-com .kevinbisner-text {
    padding: 1rem;
    font-size: 1.75rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 80%;
    height: auto;
  }

  .timberfoottech-com {
    padding: 1rem 0 0 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
  }

  .timberfoottech-com img {
    width: 80%;
    height: auto;
  }

  .timberfoottech-com .timberfoot-text {
    display: flex;
    font-size: 1.75rem;
    flex-direction: column;
    align-items: center;
    width: 80%;
    height: auto;
  }

  .contact {
    width: 100%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    padding-bottom: 1rem;
    color: #273469;
  }

  .contact-display {
    width: 80%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-self: center;
    justify-content: center;
  }

  .contact-text {
    width: 100%;
    height: auto;
  }

  .contact-text h2 {
    font-size: 2rem;
    text-align: center;
  }

  .contact-text p {
    font-size: 1.75rem;
  }

  .contact-form {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    color: #273469;
    font-size: 2rem;
    margin-bottom: 2rem;
  }

  form {
    margin-top: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: auto;
    border-color: transparent;
  }

  .form-control {
    width: 100%;
    background: transparent;
    border: none;
    outline: none;
    border-bottom: 1px solid #273469;
    color: #273469;
    font-family: "Yantramanav", sans-serif;
    font-size: 2.25rem;
    margin-bottom: 1rem;
  }

  .contact-form button {
    width: 25rem;
    height: 5rem;
    margin-top: 3rem;
    font-family: "Yantramanav", sans-serif;
    font-size: 2.5rem;
    letter-spacing: 2px;
    background-color: #273469;
    color: white;
    border-radius: 10px;
    align-self: center;
  }
}

